public/stylesheets/all.css
@font-face {
    font-family: JLEE;
    src: url('/fonts/JLEE.ttf');
}

/*RESET*/
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section { display: block; }
body { line-height: 1; }
ol, ul { list-style: none; }
blockquote, q { quotes: none; }
blockquote:before, blockquote:after,
q:before, q:after {
    content: '';
    content: none;
}
table {
    border-collapse: collapse;
    border-spacing: 0;
}


html,body { height:100%;width:100%;}
body {
    margin: 0;
    color: #010000;
    font: 14px Arial, Helvetica, sans-serif;
    overflow: hidden;
    /*background: #fff url(../images/bg-body.png) repeat-y 50% 0;*/
}
img{border-style:none;}
a{text-decoration:none; color: inherit;}
a:hover{text-decoration:underline;}
input, textarea, select {
    font: 100% Arial, Helvetica, sans-serif;
    vertical-align: middle;
    color: #000;
    resize: none;
}
/*
END OF RESET
*/

/*FONT STYLINGS*/
.important-color{
    color: #FFC233;
}

/*PAGE LAYOUT*/
#content{
    margin: 0 auto;
    height: 100%;
    width: 100%;
    z-index: 1;
    position: relative;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    overflow: hidden;
    /*display: table-cell;*/
}
#left_side_pane{
    position: absolute;
    top: 0px;
    left: 0px;
    height: 100%;
    width: 400px;
    overflow: hidden;
    z-index: 15;
}
#right_side_pane{
    position: absolute;
    top: 20px;
    right: 20px;
    width: auto;
    overflow: hidden;
    z-index: 10;
}
#top_pane{
    position: absolute;
    top: 20px;
    right: 20px;
    height: auto;
    overflow: hidden;
    z-index: 10;
}
#bottom_pane{
    position: absolute;
    bottom: 20px;
    right: 20px;
    height: auto;
    overflow: hidden;
    z-index: 10;
}
#center_pane{
    position: absolute;
    overflow: hidden;
    z-index: 10;
}

#footer{
    position: absolute;
    bottom: 5px;
    left: 410px;
    z-index: 200;
    color: black;
    font: bold 11px/18px Arial, Helvetica, sans-serif;
}
#footer li{
    float: left;
    padding-left: 5px;
}
/*Header*/
#header {
    background: url("../images/header-bg.png") repeat-x #333;
    position: relative;
    width: 100%;
    z-index: 3;
    height: 65px;
}
#header:after {
    clear: both;
    content: "";
    display: block;
}
#header .open { padding: 0; }
#header .holder {
    margin: 0 auto;
    padding: 18px 0 0 0;
}
#header .holder:after {
    clear: both;
    content: "";
    display: block;
}
#current_user_name{
    color: #FFC233;
    font: bold 12px/19px Arial, Helvetica, sans-serif;
}
#signin_button{
    color: #FFC233;
    font: bold 16px/19px Arial, Helvetica, sans-serif;
    margin: 7px 87px 0 5px;
    cursor: pointer;
    float: right;
}
.header-right {
    float: right;
    margin-right: 20px;
}

.header-right div {
    float: left;
}
#how_it_works_btn{
    color: #FFC233;
    font: italic 12px/19px Arial, Helvetica, sans-serif;
    margin: 9px 25px 0 5px;
    cursor: pointer;
}
#signed_in_button{
    position: relative;
    margin: 9px 0px 0 5px;
    cursor: pointer;
}
#signed_in_button ul{
    display:none;
    color: #000;
    z-index:2;
    right: 0px;
    width: 60px;
    position:absolute;
    /*background: #d2e9f3;*/
    background: #FFFCD5;
    padding: 10px 20px 10px 20px;
}
#signed_in_button:hover ul{
    display:block;
}

/*Hidden*/
.hidden {
    display:none;
}
.invisible{
    visibility: hidden;
}

/*Main*/
#main {
    position: relative;
    width: 100%;
    z-index: 1;
}

/*Logo in the header*/
.logo {
    height: 46px;
    width: 83px;
    margin: -9px 33px 0 7px;
    float: left;
    overflow: hidden;
    text-indent: -9999px;
}

.logo a {
    display: block;
    height: 100%;
}

/*Results list*/
.result{
    padding:10px 20px;
    height: 70px;
    position: relative;
    cursor: pointer;
}
.selected-result{
    /*background-color: #4f4f4d;*/
}
.result-image{
    float: left;
    margin-right: 10px;
}
.attending-info {
    background: #0981BE;
    color: #fff;
    float: left;
    font: bold 12px/19px Arial, Helvetica, sans-serif;
    height: 18px;
    width: 22px;
    padding: 2px 0;
    overflow: hidden;
    text-align: center;
    margin-right: 3px;
}
.result-text{
    /*float: left;*/
    color: white;
}
#smow_heading{
    background-color: #4F4F4D;
    padding: 2px 2px 2px 20px;
    margin-top: 5px;
    font-size: 18px;
    color: #FFC233;
    font-weight: 900;
    text-shadow: 2px 2px #333;
    -webkit-box-shadow: 1px 1px 3px #4F4F4D;
    -moz-box-shadow: 1px 1px 3px #4f4f4d;
    box-shadow: 1px 1px 3px #4F4F4D;

}
.result-title{
    font: bold 18px/18px Arial, Helvetica, sans-serif;
    color: #FFC233;
    margin-bottom: 0px;
    width: 265px;
    height: 20px;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
    display: block;
}
.result-date{
    padding: 1px 0 4px 0;
}
.result-tags{
    color: white;
    float: left;
    padding-bottom: 5px;
}
.result-attendees{
    padding-bottom: 5px;
    /*    float:left;*/
}
.result-attendees-image{
    float:left;
    margin-right:2px;
}
.result-attendee-more-text{
    float:left;
    height:29px;
    width:29px;
    overflow:hidden;
    font:italic 12px/12px Arial, Helvetica, sans-serif;
    color:white;/*black*/
    text-align: center;
    margin: 5px 0 0 2px;
}
/* ... */

